# walking-in-bevy

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust.yml  server-build-and-deploy.yml
art/: export.blend
assets/: export.glb
k8s/: deployment.yaml  kustomization.yaml  service.yaml
src/: client.rs  main.rs  server.rs
src/plugins/: camera.rs  core.rs  input.rs  mod.rs  network.rs  physics.rs  player.rs
src/plugins/player/: model.rs
