[package]
name = "walking-in-bevy"
version = "0.1.0"
edition = "2021"
default-run = "main"

[lib]
name = "walking_in_bevy"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
bevy-tnua-avian3d = "0.10"
avian3d = { version = "0.5", features = ["serialize"]}
bevy-tnua = "0.30"
leafwing-input-manager = "0.20"
lightyear = { version = "0.26.4", features = ["avian3d", "leafwing", "netcode", "udp", "frame_interpolation"] }
serde = "1.0.228"
rand = "0.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
